# terraform_aws_apigateway_test

./: .gitignore  .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tf  variables.tf
hello-world/: pyproject.toml
hello-world/src/hello_world/: main.py
scripts/: build_package.sh  invoke_lambda.sh
